--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Advise It Home</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="/advise-it/css/home.css">
 </head>
 <body>
 <div class="home-container">
