Added save button w/ styling

--- a/views/advisor.html
+++ b/views/advisor.html
@@ -27,7 +27,7 @@
         </div>
 
         <!-- Quarter Containers -->
-        <div class="quarters-container">
+        <form method="post" action="#" class="quarters-container">
             <!-- FALL Container -->
             <div class="quarters-boxes">
                 <h2>Fall</h2>
@@ -84,7 +84,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+
+            <input type="submit" value="Save">
+        </form>
 
     </div>
 </body>
