--- a/css/advisor.css
+++ b/css/advisor.css
@@ -81,6 +81,7 @@ h2 {
 /* Notes Styles */
 .notes {
     border-top: 1px solid;
+    display: grid;
 }
 
 textarea {
@@ -94,4 +95,21 @@ textarea {
 
 label {
     margin-left: 4px;
+}
+
+/* Save Button Styles */
+input {
+    background-color: white;
+    border: thin solid;
+    color: #72a022;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    height: 40px;
+    margin: 20px 0;
+}
+
+input:hover {
+    background-color: #72a022;
+    color: white;
 }
