Added 3 input boxes for fall w/ styling

--- a/css/advisor.css
+++ b/css/advisor.css
@@ -69,13 +69,23 @@ h2 {
     color: white;
 }
 
+/* Schedule Styles (Boxes) */
 .class-plan{
     border: thin solid;
     margin: 0 0 0 1px;
 }
 
 .schedule {
-    height: 180px;
+    height: 200px;
+    display: grid;
+}
+
+.schedule input {
+    height: 30px;
+    margin: 15px 5px;
+    background-color: white;
+    color: black;
+    border: thin solid darkgreen;
 }
 
 /* Notes Styles */
