--- a/views/advisor.html
+++ b/views/advisor.html
@@ -33,7 +33,9 @@
                 <h2>Fall</h2>
                 <div class="class-plan">
                     <div class="schedule">
-
+                        <input type="text" name="class1">
+                        <input type="text" name="class2">
+                        <input type="text" name="class3">
                     </div>
                     <div class="notes">
                         <label for="fall-notes">Notes:</label>
@@ -85,7 +87,7 @@
                 </div>
             </div>
 
-            <input type="submit" value="Save">
+            <input class="save-button" type="submit" value="Save">
         </form>
 
     </div>
