Added a datalayer and updated composer.json

--- a/views/advisor.html
+++ b/views/advisor.html
@@ -33,9 +33,9 @@
                 <h2>Fall</h2>
                 <div class="class-plan">
                     <div class="schedule">
-                        <input type="text" name="class1">
-                        <input type="text" name="class2">
-                        <input type="text" name="class3">
+                        <input type="text" name="fall-class1">
+                        <input type="text" name="fall-class2">
+                        <input type="text" name="fall-class3">
                     </div>
                     <div class="notes">
                         <label for="fall-notes">Notes:</label>
