--- a/views/advisor.html
+++ b/views/advisor.html
@@ -27,19 +27,19 @@
         </div>
 
         <!-- Quarter Containers -->
-        <form method="post" action="<?=$_SERVER['PHP_SELF'];?>" class="quarters-container">
+        <form method="post" class="quarters-container">
             <!-- FALL Container -->
             <div class="quarters-boxes">
                 <h2>Fall</h2>
                 <div class="class-plan">
                     <div class="schedule">
-                        <input type="text" name="fallClass1">
-                        <input type="text" name="fallClass2">
-                        <input type="text" name="fallClass3">
+                        <input type="text" name="fall_class1">
+                        <input type="text" name="fall_class2">
+                        <input type="text" name="fall_class3">
                     </div>
                     <div class="notes">
                         <label for="fallNotes">Notes:</label>
-                        <textarea id="fallNotes" name="fallNotes" rows="4" cols="50"></textarea>
+                        <textarea id="fallNotes" name="fall_notes" rows="4" cols="50"></textarea>
                     </div>
                 </div>
             </div>
