--- a/views/advisor.html
+++ b/views/advisor.html
@@ -16,7 +16,9 @@
 
         <!-- Token -->
         <div class="token">
-            <button class="button"  name="token">Token: <h9 id="token" name="token"></h9></button>
+            <button class="button"  name="token">Token:
+                <h9  name="token" value="{{ @token }}"></h9></button>
+<!--            id="token"-->
         </div>
 
         <!-- Button Container -->
@@ -33,7 +35,7 @@
                 <h2>Fall</h2>
                 <div class="class-plan">
                     <div class="schedule">
-                        <textarea name="fall" rows="4" cols="10"></textarea>
+                        <textarea name="fall" rows="4" cols="10" value="{{ @fall }}"></textarea>
                     </div>
                     <div class="notes">
                         <label for="fallNotes">Notes:</label>
@@ -51,7 +53,7 @@
                     </div>
                     <div class="notes">
                         <label for="winter-notes">Notes:</label>
-                        <textarea id="winter-notes" name="notes" rows="4" cols="50"></textarea>
+                        <textarea id="winter-notes" name="winter_notes" rows="4" cols="50"></textarea>
                     </div>
                 </div>
             </div>
@@ -65,7 +67,7 @@
                     </div>
                     <div class="notes">
                         <label for="spring-notes">Notes:</label>
-                        <textarea id="spring-notes" name="notes" rows="4" cols="50"></textarea>
+                        <textarea id="spring-notes" name="spring_notes" rows="4" cols="50"></textarea>
                     </div>
                 </div>
             </div>
@@ -80,7 +82,7 @@
 
                     <div class="notes">
                         <label for="summer-notes">Notes:</label>
-                        <textarea id="summer-notes" name="notes" rows="4" cols="50"></textarea>
+                        <textarea id="summer-notes" name="summer_notes" rows="4" cols="50"></textarea>
                     </div>
                 </div>
             </div>
