--- a/views/advisor.html
+++ b/views/advisor.html
@@ -23,9 +23,14 @@
 
         <!-- Button Container -->
         <div class="button-container">
-            <a href="advisor">
+            <a href="plan">
                 <button id="new-plan">Create Plan</button>
             </a>
+        </div>
+
+        <!-- Students advisor  -->
+        <div class="advisor-container">
+            <h9 id="advisor" name="advisor">Advisor: </h9>
         </div>
 
         <!-- Quarter Containers -->
