--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
         <h1>Advise-It Home</h1>
     </div>
     <div class="new-plan">
-        <a href="advisor">
+        <a href="plan">
             <button id="create-plan">Create New Plan</button>
         </a>
     </div>
