--- a/views/home.html
+++ b/views/home.html
@@ -7,14 +7,22 @@
 </head>
 <body>
 <div class="home-container">
-    <div>
-        <h1>Advise-It Home</h1>
-    </div>
     <div class="new-plan">
+        <h1>Advise-It Home</h1>
         <a href="plan">
             <button id="create-plan">Create New Plan</button>
         </a>
     </div>
+    <form action="#" method="post" class="form-container">
+        <div class="form-group">
+            <input type="text" class="form-control" id="username" name="username" placeholder="UserName">
+        </div>
+        <div class="form-group">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+        </div>
+        <!--<span class="err">Incorrect login</span><br>-->
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
 </div>
 </body>
 </html>
