Created table which shows info from database

--- a/views/admin.html
+++ b/views/admin.html
@@ -4,26 +4,59 @@
     <meta charset="UTF-8">
     <title>Admin</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
 </head>
 <body>
 <div class="container">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Advise It</a>
+            <a class="navbar-brand" href="plan">Advise It</a>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="advisor">Home</a></li>
                 <li><a href="logout"><span class="glyphicon glyphicon-log-out"></span>Logout</a></li>
             </ul>
         </div>
     </nav>
 
     <h1>Admin Page</h1>
-    <p>This page contains super-sensitive data</p>
+
+    <table id="table-plan" class="table table-bordered">
+        <thead class="bg-success">
+        <tr>
+            <td>Id</td>
+            <td>Link</td>
+            <td>Advisor</td>
+            <td>Saved</td>
+        </tr>
+        </thead>
+        <tbody>
+        <repeat group="{{ @plan }}" value="{{ @plan }}">
+            <tr>
+                <td>{{ @plan['token'] }}</td>
+                <td>Link</td>
+                <td>{{ @plan['advisor'] }}</td>
+                <td>{{ @plan['saved_date'] }}</td>
+            </tr>
+        </repeat>
+        </tbody>
+        <tfoot>
+        <tr>
+            <td>Id</td>
+            <td>Link</td>
+            <td>Advisor</td>
+            <td>Saved</td>
+        </tr>
+        </tfoot>
+    </table>
 </div>
 
+<script src="//code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    <script src="//code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script type="text/javascript" src="//cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script>
+    $("#table-plan").DataTable();
+</script>
 </body>
 </html>
