--- a/views/admin.html
+++ b/views/admin.html
@@ -5,21 +5,20 @@
     <title>Admin</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+    <link rel="stylesheet" href="/advise-it/css/admin.css">
 </head>
 <body>
 <div class="container">
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="plan">Advise It</a>
-            <ul class="nav navbar-nav">
-                <li><a href="logout"><span class="glyphicon glyphicon-log-out"></span>Logout</a></li>
-            </ul>
-        </div>
+    <nav class="navbar">
+        <a class="navbar-brand" href="plan">Advise It</a>
+        <ul class="nav navbar-nav">
+            <li><a href="logout">Logout</a></li>
+        </ul>
     </nav>
 
     <h1>Admin Page</h1>
 
-    <table id="table-plan" class="table table-bordered">
+    <table id="table-plan" class="table table-bordered table-hover">
         <thead class="bg-success">
         <tr>
             <td>Id</td>
@@ -39,7 +38,7 @@
         </repeat>
         </tbody>
         <tfoot>
-        <tr>
+        <tr class="bg-success">
             <td>Id</td>
             <td>Link</td>
             <td>Advisor</td>
