--- a/views/advisor.html
+++ b/views/advisor.html
@@ -17,7 +17,7 @@
         <!-- Token -->
         <div class="token">
             <button class="button"  name="token">Token:
-                <h9  name="token" value="{{ @token }}"></h9></button>
+                <h9  name="token" value="{{ @token }}">{{ @token }}</h9></button>
 <!--            id="token"-->
         </div>
 
@@ -30,7 +30,7 @@
 
         <!-- Students advisor  -->
         <div class="advisor-container">
-            <h9 id="advisor" name="advisor">Advisor: </h9>
+            <h9 id="advisor" name="advisor">Advisor: {{ @advisor }}</h9>
         </div>
 
         <!-- Quarter Containers -->
