--- a/views/advisor.html
+++ b/views/advisor.html
@@ -28,6 +28,7 @@
             </a>
         </div>
 
+        <button id="print-button" onclick="window.print()">Print</button>
         <!-- Students advisor  -->
         <div class="advisor-container">
             <h9 id="advisor" name="advisor">Advisor: {{ @advisor }}</h9>
