Token fixed on page refresh

--- a/views/advisor.html
+++ b/views/advisor.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <input class="save-button" type="submit" value="Save" name="submit">
+            <input class="save-button" id="save-plan" type="submit" value="Save" name="submit">
         </form>
 
     </div>
