--- a/views/advisor.html
+++ b/views/advisor.html
@@ -17,7 +17,7 @@
         <!-- Token -->
         <div class="token">
             <button class="button"  name="token">Token:
-                <h9  name="token" value="{{ @token }}">{{ @token }}</h9></button>
+                <h9  name="token" value="{{ @token }}">{{ @SESSION.token }}</h9></button>
 <!--            id="token"-->
         </div>
 
